Preliminary trading code
-Added new code for brute forcing main and anti-teams with trading
-Adjusted trade value formula is just a placeholder, and is likely inaccurate. However, it emulates the trade formula well enough for testing purposes.
-Added new code for detecting and dealing with liquipedia redirects

--- a/FPL Calculator/Form1.resx
+++ b/FPL Calculator/Form1.resx
@@ -123,4 +123,10 @@
   <metadata name="backgroundWorkerBruteForce.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>159, 17</value>
   </metadata>
+  <metadata name="backgroundWorkerBruteTrading.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>375, 17</value>
+  </metadata>
+  <metadata name="backgroundWorkerBruteTradeAnti.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>603, 17</value>
+  </metadata>
 </root>
